# Worldmind

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Spec.md  cf-vars.yml  clean-repo.sh  docker-compose.yml  manifest.yml  pom.xml  pyproject.toml  run.sh  test_results.txt  worldmind-phase1-prd-v2.docx.md
.github/workflows/: agent-images.yml  centurion-images.yml
docker/agent-base/: Dockerfile  entrypoint.sh  sse-proxy.py
docker/agent-coder/: Dockerfile
docker/agent-deployer/: Dockerfile
docker/agent-refactorer/: Dockerfile
docker/agent-researcher/: Dockerfile
docker/agent-reviewer/: Dockerfile
docker/agent-tester/: Dockerfile
docker/centurion-base/: Dockerfile  entrypoint.sh  sse-proxy.py
docker/centurion-forge/: Dockerfile
docker/centurion-gauntlet/: Dockerfile
docker/centurion-prism/: Dockerfile
docker/centurion-pulse/: Dockerfile
docker/centurion-vigil/: Dockerfile
docker/sandboxes/: Dockerfile.base  Dockerfile.java  Dockerfile.python  build-all.sh  entrypoint.sh
docker/starblasters/: Dockerfile.java  Dockerfile.python  build-all.sh  entrypoint.sh
docs/: Spring_AI_Research_2026.md  deployer-agent-prd.md  nova-force-prd.md  starblaster-runtime-resolution.md  worldmind-phase1-prd-v2.docx.md  worldmind-phase1-prd.docx
docs/architecture/: component-rename-plan.md  git-worktrees.md  merge-conflict-analysis.md
docs/configuration/: parallel-execution.md
scripts/: build-agents.sh  rename-components.sh
src/worldmind/: __init__.py
worldmind-ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
(+260 files in other folders)
