[project]
name = "worldmind"
version = "1.0.0"
description = "Agentic Code Assistant — LangGraph Control Plane + Goose Worker Nodes"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "psycopg[binary]>=3.2",
    "docker>=7.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[project.scripts]
worldmind = "worldmind.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
